--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_URL=jdbc:postgresql://localhost:5432/userservice_db
+DB_URL=jdbc:postgresql://db:5432/postgres
 DB_USERNAME=postgres
 REDIS_PASSWORD=danran15
 DB_PASSWORD=danran15
+DB_NAME=userservice_db
