--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,27 +4,65 @@ stages:
   - analyse
   - build-image
 
+variables:
+  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository -Djava.version=17"
+
+cache:
+  paths:
+    - .m2/repository/
+    - target/
+
 build-job:
   stage: build
+  image: maven:3.9.9-eclipse-temurin-17
+  before_script:
+    - chmod +x ./mvnw
   script:
-    - docker build -t userservice-server .
+    - ./mvnw clean compile -DskipTests
+  artifacts:
+    paths:
+      - target/classes/
+    expire_in: 1 hour
 
 test-job:
   stage: test
+  image: maven:3.9.9-eclipse-temurin-17
+  before_script:
+    - chmod +x ./mvnw
   script:
     - ./mvnw test
+  artifacts:
+    paths:
+      - target/surefire-reports/
+      - target/site/jacoco/
+    reports:
+      junit: target/surefire-reports/*.xml
 
 analyse-job:
   stage: analyse
   image: maven:3.9.9-eclipse-temurin-17
+  before_script:
+    - chmod +x ./mvnw
   script:
     - ./mvnw sonar:sonar
       -Dsonar.projectKey=userservice
       -Dsonar.projectName=userservice
       -Dsonar.host.url=${SONARQUBE_URL}
       -Dsonar.login=${SONARQUBE_TOKEN}
+  dependencies:
+    - test-job
 
 build-image-job:
   stage: build-image
+  image: docker:20.10.16
+  services:
+    - docker:20.10.16-dind
+  before_script:
+    - apk add --no-cache docker-compose
   script:
-    - docker compose up -d
+    - docker build -t userservice-server:latest .
+  dependencies:
+    - build-job
+  only:
+    - main
+    - tags
