--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,6 @@ stages:
 
 variables:
   MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
-  DOCKER_HOST: tcp://docker:2375
-  DOCKER_TLS_CERTDIR: ""
   TESTCONTAINERS_RYUK_DISABLED: "true"
 
 cache:
@@ -16,7 +14,8 @@ cache:
 
 build-job:
   stage: build
-  image: maven:3.9.9-eclipse-temurin-17
+  tags:
+    - shell
   before_script:
     - chmod +x ./mvnw
   script:
@@ -28,18 +27,11 @@ build-job:
 
 test-job:
   stage: test
-  image: maven:3.9.9-eclipse-temurin-17
-  services:
-    - name: docker:24.0.7-dind
-      command: ["--tls=false", "--host=tcp://0.0.0.0:2375"]
-  variables:
-    DOCKER_HOST: tcp://docker:2375
-    DOCKER_TLS_CERTDIR: ""
-    TESTCONTAINERS_RYUK_DISABLED: "true"
+  tags:
+    - shell
   before_script:
     - chmod +x ./mvnw
-    - apk add --no-cache docker
-    - sleep 10
+    - docker --version
     - docker info
   script:
     - ./mvnw test -Dtestcontainers.reuse.enable=true
@@ -54,7 +46,8 @@ test-job:
 
 analyse-job:
   stage: analyse
-  image: maven:3.9.9-eclipse-temurin-17
+  tags:
+    - shell
   before_script:
     - chmod +x ./mvnw
   script:
@@ -69,7 +62,8 @@ analyse-job:
 
 package-job:
   stage: analyse
-  image: maven:3.9.9-eclipse-temurin-17
+  tags:
+    - shell
   before_script:
     - chmod +x ./mvnw
   script:
