All tests passed

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,10 @@
             <artifactId>sonar-plugin-api</artifactId>
             <version>13.0.0.3026</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
         <dependency>
             <groupId>org.jacoco</groupId>
