--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -127,8 +127,8 @@ jobs:
         run: |
           chmod +x ./mvnw
           ./mvnw sonar:sonar \
-            -Dsonar.projectKey=userservice \
-            -Dsonar.projectName=userservice \
+            -Dsonar.projectKey=Dangerinchik_userservice \
+            -Dsonar.projectName=dangerinchik \
             -Dsonar.host.url=$SONARQUBE_URL \
             -Dsonar.login=$SONARQUBE_TOKEN \
             -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
