--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,11 +131,12 @@ jobs:
             -Dsonar.host.url=$SONARQUBE_URL \
             -Dsonar.token=$SONARQUBE_TOKEN \
             -Dsonar.organization=dangerinchik \
+            -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
   package:
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
+#    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
     strategy:
       matrix:
         java-version: [17]
